--- a/api/package.json
+++ b/api/package.json
@@ -38,6 +38,7 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.6.2",
     "typeorm": "^0.3.14"
   },
   "devDependencies": {
