--- a/api/.gitignore
+++ b/api/.gitignore
@@ -14,10 +14,11 @@
 # misc
 .DS_Store
 .idea/
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.local.env
+.development.local.env
+.test.local.env
+.production.local.env
+.
 
 npm-debug.log*
 yarn-debug.log*
