--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "orval": "orval --config ./orval.config.js",
     "orval-sync": "npm run sync-openapi && npm run orval"
   },
-
+  "proxy": "http://127.0.0.1:5000",
   "husky": {
     "hooks": {
       "pre-commit": "npm run lint-staged"
@@ -92,7 +92,7 @@
     "@babel/eslint-parser": "^7.17.0",
     "@babel/node": "^7.17.10",
     "@babel/preset-env": "^7.17.10",
-    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-react": "^7.18.6",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
     "cross-env": "^7.0.3",
@@ -113,6 +113,7 @@
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "lint-staged": "^13.0.3",
+    "orval": "^6.14.3",
     "prettier": "^2.7.1",
     "react-app-alias": "^2.2.0",
     "react-app-rewired": "^2.2.1",
