--- a/client/package.json
+++ b/client/package.json
@@ -41,7 +41,7 @@
     "@tanstack/react-query-devtools": "^4.7.2",
     "@types/qs": "^6.9.7",
     "@types/store": "^2.0.2",
-    "antd": "^4.23.0",
+    "antd": "4.23.0",
     "axios": "^0.27.0",
     "axios-mock-adapter": "^1.18.1",
     "bootstrap": "^4.5.2",
