--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,11 +3,11 @@
 
 name: Node.js CI
 
-on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+on:  [push]
+  # :
+  #   branches: [ "master", "testgihub" ]
+  # pull_request:
+  #   branches: [ "master" ]
 
 jobs:
   build:
@@ -20,12 +20,21 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version:  16.x
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+      - uses: actions/checkout@v2
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16.x
+      - name: Install Dependencies Api
+        run: |
+          cd api
+          npm install
+      - name: Install Dependencies and build in Client
+        run: |
+          cd client
+          npm install && build
+
+      # - name: Test
+      #   run: npm test
+      # - name: Lint
+      #   run: npm run lint
