--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 16.x
+          node-version: 17.x
       - name: Install Dependencies Api
         run: |
           cd api
@@ -33,7 +33,11 @@ jobs:
         run: |
           cd client
           npm install && build
-
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: build-client
+          path: client/build
       # - name: Test
       #   run: npm test
       # - name: Lint
