--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,14 +25,16 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 17.x
+          cache: 'yarn'
       - name: Install Dependencies Api
         run: |
           cd api
-          npm install
+          yarn install
       - name: Install Dependencies and build in Client
         run: |
           cd client
-          npm install && build
+          yarn install
+          yarn build
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
