--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,7 +25,8 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 18.x
-          cache: 'yarn'
+      - name: Install Yarn
+        run: npm install -g yarn
       - name: Install Dependencies Api
         run: |
           cd api
