--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,11 +20,11 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Install Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: 18.x
+          node-version: latest
       - name: Install Yarn
         run: npm install -g yarn
       - name: Install Dependencies Api
@@ -37,7 +37,7 @@ jobs:
           yarn install
           yarn build
       - name: Upload artifacts
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: build-client
           path: client/build
