--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,25 +7,41 @@ on:
   push:
     branches: [ "master" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "master", "dev" ]
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [14.x, 16.x, 18.x]
+    # strategy:
+    #   matrix:
+    #     node-version: [14.x, 16.x, 18.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+      - uses: actions/checkout@v3
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: latest
+      - name: Install Yarn
+        run: npm install -g yarn
+      - name: Install Dependencies Api
+        run: |
+          cd api
+          yarn install
+      - name: Install Dependencies and build in Client
+        run: |
+          cd client
+          yarn install
+          yarn build
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: build-client
+          path: client/build
+      # - name: Test
+      #   run: npm test
+      # - name: Lint
+      #   run: npm run lint
