--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -45,3 +45,20 @@ jobs:
       #   run: npm test
       # - name: Lint
       #   run: npm run lint
+  
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: build-client
+          path: client/build
+      - name: Copy files to server
+        uses: appleboy/scp-action@master
+        with:
+          host: xephang.online
+          username: ${{ secrets.SERVER_USER }}
+          password: ${{ secrets.SERVER_PASS }}
+          source: "client/build"
+          target: "/home/dev/thienphu/test"
