--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,7 +10,7 @@ on:
     branches: [ "master", "dev" ]
 
 jobs:
-  build:
+  build-and-deploy:
 
     runs-on: ubuntu-latest
 
@@ -20,6 +20,7 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
+      - name: Start build
       - uses: actions/checkout@v3
       - name: Install Node.js
         uses: actions/setup-node@v3
@@ -41,19 +42,7 @@ jobs:
         with:
           name: build-client
           path: client/build
-      # - name: Test
-      #   run: npm test
-      # - name: Lint
-      #   run: npm run lint
-  
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: build-client
-          path: client/build
+      - name: Start deploy
       - name: Copy files to server
         uses: appleboy/scp-action@master
         with:
@@ -62,3 +51,7 @@ jobs:
           password: ${{ secrets.SERVER_PASS }}
           source: "client/build"
           target: "/home/dev/thienphu/test"
+      # - name: Test
+      #   run: npm test
+      # - name: Lint
+      #   run: npm run lint
