--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           cd api
           yarn install
-      - name: Install Dependencies and build in Client
+      - name: Install Dependencies And Build In Client
         run: |
           cd client
           yarn install
