--- a/client/package.json
+++ b/client/package.json
@@ -73,6 +73,7 @@
     "react-intl": "^6.1.2",
     "react-jvectormap": "^0.0.16",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-qr-scanner": "^1.0.0-alpha.11",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scroll": "^1.8.8",
