--- a/api/package.json
+++ b/api/package.json
@@ -28,6 +28,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/serve-static": "^3.0.1",
     "@nestjs/swagger": "^6.3.0",
     "@nestjs/typeorm": "^9.0.1",
     "bcrypt": "^5.1.0",
@@ -55,6 +56,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/lodash": "^4.14.194",
+    "@types/multer": "^1.4.7",
     "@types/node": "18.11.18",
     "@types/nodemailer": "^6.4.7",
     "@types/passport-jwt": "^3.0.8",
