[FEA] update env file

--- a/api/.env.example
+++ b/api/.env.example
@@ -14,3 +14,19 @@ PORT= port app will running
 JWT_SECRET=secret 
   #1 hour
 JWT_EXPIRATION_TIME=3600 
+
+
+#JWT 
+  #secret key 
+JWT_SECRET=secret 
+  #1 hour
+JWT_EXPIRATION_TIME=3600 
+
+#Email config
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=
+SMTP_PASS=
+
+CLIENT_URL=
