[FIX] fix github actions build task

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -42,7 +42,7 @@ jobs:
           name: build-client
           path: client/build
   
-  deploy:
+  # deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
