--- a/api/package.json
+++ b/api/package.json
@@ -37,6 +37,7 @@
     "cookie-parser": "^1.4.6",
     "handlebars": "^4.7.7",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "mysql2": "^3.2.0",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
