--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "@reduxjs/toolkit": "^1.9.0",
     "@tanstack/react-query": "^4.29.5",
     "@tanstack/react-query-devtools": "^4.29.6",
+    "@types/moment": "^2.13.0",
     "@types/qs": "^6.9.7",
     "@types/store": "^2.0.2",
     "antd": "^4.23.0",
