[FIX] fix image icon

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Waiting Queue",
   "icons": [
     {
-      "src": "/resources/favicon.png",
+      "src": "/resources/images/tf-logo.jpg",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
