--- a/api/.env
+++ b/api/.env
@@ -22,7 +22,8 @@ SMTP_SECURE=false
 SMTP_USER=taikhoancolab@gmail.com
 SMTP_PASS=fflmbzhipylhyklq
 
-CLIENT_URL=https://xephang.online
+# CLIENT_URL=https://xephang.online
+CLIENT_URL=http://192.168.0.105:3000
 
 #File location
 FILE_PATH=./uploads
