--- a/api/package.json
+++ b/api/package.json
@@ -59,6 +59,7 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/cache-manager": "^4.0.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/cron": "^2.0.1",
     "@types/express": "^4.17.13",
