--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -59,7 +59,12 @@ jobs:
           password: ${{ secrets.SERVER_PASSWORD }}
           port: ${{ secrets.PORT }}
           script: |
-            # cd /var/www/html
+            echo "Deploying..."
+            echo "Starting copy build files to server..."
+            scp -r client/build/* ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/home/dev/thienphu/client
+            echo "Copy build files to server successfully"
+            echo "Restarting nginx..."
+            sudo service nginx restart
             # rm -rf *
             # cp -r /home/runner/work/My-Portfolio/My-Portfolio/client/build/* .
             # sudo service nginx restart
