[GITHUB] test build nestjs

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,6 +30,12 @@ jobs:
         run: |
           cd api
           yarn install
+          yarn build
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: build-api
+          path: api/dist
       - name: Install Dependencies And Build In Client
         run: |
           cd client
@@ -61,21 +67,11 @@ jobs:
             ssh-add ${{ secrets.SERVER_SECRET_KEY }}
             ssh-keyscan -t rsa ${{ secrets.HOST }} >> ~/.ssh/known_hosts
             chmod 644 ~/.ssh/known_hosts
-      - name: Process SSH
+      - name: Deploy client
         run: |
-          ssh -o StrictHostKeyChecking=no -p ${{ secrets.PORT }} ${{ secrets.USERNAME }}@${{ secrets.HOST }} "cd /home/dev/thienphu/client && pwd"
+          ssh -o StrictHostKeyChecking=no -p ${{ secrets.PORT }} ${{ secrets.USERNAME }}@${{ secrets.HOST }} "cd /home/dev/thienphu/client && rm -rf *"
           scp -o StrictHostKeyChecking=no -P ${{ secrets.PORT }} -r client/build/* ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/home/dev/thienphu/client
-      # - name: SSH to server
-      #   uses: appleboy/ssh-action@master
-      #   with:
-      #     host: ${{ secrets.HOST }}
-      #     username: ${{ secrets.USERNAME }}
-      #     password: ${{ secrets.SERVER_PASSWORD }}
-      #     port: ${{ secrets.PORT }}
-      #     script: |
-      #       echo "Deploying..."
-      #       echo "Starting copy build files to server..."
-      #       echo "Copy build files to server successfully"
-      #       echo "Restarting nginx..."
-      #       service nginx reload
-      #       echo "Reload nginx successfully"
+          ssh -o StrictHostKeyChecking=no -p ${{ secrets.PORT }} ${{ secrets.USERNAME }}@${{ secrets.HOST }} "service nginx reload"
+      - name: Deploy nestjs
+        run: |
+          pwd && ls -la
