--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,6 +33,7 @@ jobs:
           yarn build
       - name: Copy API files
         run: |
+          pwd && ls -la
           mkdir api/destination_folder
           cp api/dist api/.env api/package.json api/uploads  api/destination_folder
       - name: Upload artifacts
