--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -79,11 +79,7 @@ jobs:
             chmod 644 ~/.ssh/known_hosts
       - name: Deploy client
         run: |
-          ssh -o StrictHostKeyChecking=no -p ${{ secrets.PORT }} ${{ secrets.USERNAME }}@${{ secrets.HOST }} "cd /home/dev/thienphu/client && pwd"
-          scp -o StrictHostKeyChecking=no -P ${{ secrets.PORT }} -rf client/build/* ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/home/dev/thienphu/client
-          # ssh -o StrictHostKeyChecking=no -p ${{ secrets.PORT }} ${{ secrets.USERNAME }}@${{ secrets.HOST }} "service nginx reload"
-      - name: Deploy nestjs
-        run: |
-          # ssh -o StrictHostKeyChecking=no -p ${{ secrets.PORT }} ${{ secrets.USERNAME }}@${{ secrets.HOST }} "cd /home/dev/thienphu/api && pwd && pwd"
-          scp -o StrictHostKeyChecking=no -P ${{ secrets.PORT }} -rf api/destination_folder/* ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/home/dev/thienphu/api
-          ssh -o StrictHostKeyChecking=no -p ${{ secrets.PORT }} ${{ secrets.USERNAME }}@${{ secrets.HOST }} "yarn install && ./reload-api.sh"
+          ssh -o StrictHostKeyChecking=no -p ${{ secrets.PORT }} ${{ secrets.USERNAME }}@${{ secrets.HOST }} "pwd"
+
+# ssh -o StrictHostKeyChecking=no -p ${{ secrets.PORT }} ${{ secrets.USERNAME }}@${{ secrets.HOST }} "service nginx reload"
+# ssh -o StrictHostKeyChecking=no -p ${{ secrets.PORT }} ${{ secrets.USERNAME }}@${{ secrets.HOST }} "cd /home/dev/thienphu/api && pwd && pwd"
