--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -80,7 +80,7 @@ jobs:
       - name: Deploy client
         run: |
           ssh -o StrictHostKeyChecking=no -p ${{ secrets.PORT }} ${{ secrets.USERNAME }}@${{ secrets.HOST }} "cd /home/dev/thienphu/client && rm -rf ./**"
+          scp -o StrictHostKeyChecking=no -P ${{ secrets.PORT }} -r client/build/* ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/home/dev/thienphu/client
 
-# scp -o StrictHostKeyChecking=no -P ${{ secrets.PORT }} -r client/build ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/home/dev/thienphu/client
 # ssh -o StrictHostKeyChecking=no -p ${{ secrets.PORT }} ${{ secrets.USERNAME }}@${{ secrets.HOST }} "service nginx reload"
 # ssh -o StrictHostKeyChecking=no -p ${{ secrets.PORT }} ${{ secrets.USERNAME }}@${{ secrets.HOST }} "cd /home/dev/thienphu/api && pwd && pwd"
