[FIX] remove todo

--- a/api/.env
+++ b/api/.env
@@ -28,8 +28,7 @@ CLIENT_URL=http://192.168.0.105:3000
 #File location
 FILE_PATH=./uploads
 
+# DOMAIN=xephang.online
 DOMAIN=192.168.0.105
-# TODO: phan quyen api
-# TODO: handle time
 
 TIMEOUT_VERIFY=30
