[FIX] add feature with dynamic render time

--- a/api/.env
+++ b/api/.env
@@ -31,4 +31,10 @@ FILE_PATH=./uploads
 # DOMAIN=xephang.online
 DOMAIN=192.168.0.105
 
+# 30 seconds
 TIMEOUT_VERIFY=30
+
+# 15 days = 1296000 seconds
+LONG_TIMEOUT_VERIFY= 1296000
+      
+RECAPTCHA_SECRET_KEY='6LeFRi4mAAAAANeolVuw-1dztVohn4loOPDqcPph'
