--- a/client/.env
+++ b/client/.env
@@ -5,3 +5,4 @@ DISABLE_ESLINT_PLUGIN=true
 REACT_APP_KEYCAPTCHA='6LeFRi4mAAAAAKfVDkr2U3fk7x9xpPyEZjofg7b7'
 REACT_APP_GA4=G-RGF53C4F9M
 REACT_APP_TIMEOUT_VERIFY=10
+REACT_APP_LONG_TIMEOUT_VERIFY=
