[FIX] fix queue long time

--- a/api/.env
+++ b/api/.env
@@ -34,7 +34,7 @@ DOMAIN=192.168.1.9
 # 30 seconds
 TIMEOUT_VERIFY=30
 
-# 15 days = 1296000 seconds
-LONG_TIMEOUT_VERIFY= 1296000
+# 15 days 
+LONG_TIMEOUT_VERIFY= 15
       
 RECAPTCHA_SECRET_KEY='6LeFRi4mAAAAANeolVuw-1dztVohn4loOPDqcPph'
