--- a/client/package.json
+++ b/client/package.json
@@ -77,6 +77,7 @@
     "react-intl": "^6.1.2",
     "react-jvectormap": "^0.0.16",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-push-notification": "^1.5.3",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-redux": "^8.0.5",
