--- a/client/package.json
+++ b/client/package.json
@@ -69,6 +69,7 @@
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.0.0",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-fast-marquee": "^1.6.0",
     "react-ga4": "^1.4.1",
     "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^6.0.0",
