[FIX] add notif

--- a/client/.env.production
+++ b/client/.env.production
@@ -1,1 +1,2 @@
-REACT_APP_HOSTNAME=http://xephang.online:5000
+REACT_APP_HOSTNAME=https://api.xephang.online
+REACT_APP_PUBLIC_URL=https://xephang.online
